--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "react-router-dom": "^6.18.0",
         "react-scripts": "5.0.1",
         "react-toastify": "^9.1.3",
+        "slugify": "^1.6.6",
         "tailwindcss": "^3.3.5",
         "typescript": "^4.9.5",
         "web-vitals": "^2.1.4",
