--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@tailwindcss/line-clamp": "^0.4.4",
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
@@ -11,10 +12,10 @@
         "@types/react": "^18.2.36",
         "@types/react-dom": "^18.2.14",
         "autoprefixer": "^10.4.16",
-        "axios": "^1.6.0",
         "class-variance-authority": "^0.7.0",
         "firebase": "^10.5.2",
         "formik": "^2.4.5",
+        "moment": "^2.29.4",
         "postcss": "^8.4.31",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
