--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
         "react-icons": "^4.11.0",
         "react-router-dom": "^6.18.0",
         "react-scripts": "5.0.1",
+        "react-select": "^5.8.0",
         "react-toastify": "^9.1.3",
         "slugify": "^1.6.6",
+        "sweetalert2": "^11.9.0",
         "tailwindcss": "^3.3.5",
         "typescript": "^4.9.5",
         "web-vitals": "^2.1.4",
