--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
         "class-variance-authority": "^0.7.0",
         "firebase": "^10.5.2",
         "formik": "^2.4.5",
+        "html-react-parser": "^5.0.6",
         "moment": "^2.29.4",
         "postcss": "^8.4.31",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^4.11.0",
-        "react-loading-skeleton": "^3.3.1",
+        "react-quill": "^2.0.0",
         "react-router-dom": "^6.18.0",
         "react-scripts": "5.0.1",
         "react-select": "^5.8.0",
